--- a/FrontEnd/mini-order-management/src/pages/css/create-product.css
+++ b/FrontEnd/mini-order-management/src/pages/css/create-product.css
@@ -2,7 +2,8 @@
   min-height: 100vh;
   background-color: #f5f5f5;
   font-family: Arial, sans-serif;
-  width: 1280px;
+  width: 100%;
+  max-width: 1280px;
   margin: 0 auto;
 }
 
